tests/should-fail/flags/overflowing-integer-part.j
//# +checknumberliterals
function test takes nothing returns nothing
    local real x = 10000000000.0
endfunction

